# ship-rts

./: .gitignore  README.md  pyproject.toml
resources/: __init__.py  filefactory.py
resources/config/: default.toml
resources/data/: atlas1.toml
resources/images/: atlas1.aseprite
shiprts/: __init__.py  __main__.py  main.py
shiprts/core/: application.py  config.py  context.py  context_impl.py
shiprts/lib/: application.py  texture.py  transform.py  utils.py
shiprts/views/: TEMPLATE.py  atlas_debug.py  root.py
